[tool.poetry]
name = "polus-tabular-clustering-pytorch-tabnet"
version = "0.1.0-dev0"
description = "PyTorch TabNet tool"
authors = [
"Hamdah Shafqat Abbasi <hamdahshafqat.abbasi@nih.gov>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
filepattern = "^2.0.4"
typer = "^0.12.3"
vaex = "^4.7.0"
torch = "2.2.2"
pytorch-tabnet = "^4.1.0"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
