[tool.poetry]
name = "polus-tabular-features-dimension-reduction-quality-metrics"
version = "0.1.0-dev0"
description = "Measure the quality of dimension reduction results"
authors = [
    "Najib Ishaq <najib.ishaq@nih.gov>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
filepattern = "^2.0.0"
typer = "^0.7.0"
numpy = "<2.0.0"
polus_tabular_transforms_dimension_reduction = { path = "../../transforms/dimension-reduction-tool", develop = true }
tqdm = "^4.66.4"
scipy = "^1.13"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../../ruff.toml"
ignore = [
    "PLR0913",  # Too many arguments to function call
]
