[tool.poetry]
name = "polus-tabular-transforms-dimension-reduction"
version = "0.1.0-dev0"
description = "Dimension Reduction via various methods"
authors = [
    "Najib Ishaq <najib.ishaq@nih.gov>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
filepattern = "^2.0.0"
typer = "^0.7.0"
numpy = "<2.0.0"
scikit-learn = "^1.5.1"
umap-learn = "^0.5.6"
pyarrow = ">=16.0,<17.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../../ruff.toml"
ignore = [
    "PLR0913",  # Too many arguments to function call
]
