[tool.poetry]
name = "polus-tabular-transforms-tabular-merger"
version = "0.1.3-dev3"
description = "Merge vaex supported tabular file format into a single merged file."
authors = [
"Nick Schaub <nick.schaub@nih.gov>",
"Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
typer = "^0.7.0"
blake3 = "^0.3.3"
llvmlite = "^0.39.1"
vaex = "^4.17.0"
tqdm = "^4.65.0"
filepattern = "^2.0.5"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
