[tool.poetry]
name = "polus-tabular-transforms-tabular-thresholding"
version = "0.1.6-dev1"
description = "This plugin computes thresholds using three methods and apply thresholds on each labelled data to produce binary outputs."
authors = [
"Hamdah Shafqat Abbasi <hamdahshafqat.abbasi@nih.gov>",
"Najib Ishaq <najib.ishaq@nih.gov>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
filepattern = "^2.0.4"
typer = "^0.7.0"
tqdm = "^4.64.1"
vaex = "^4.17.0"
pyarrow = ">=16.0,<17.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
