[tool.poetry]
name = "polus-tabular-utils-filepattern-generator"
version = "0.2.2-dev0"
description = "The filepattern generator creates a CSV or Feather file with new filepatterns, each of which subsets the directory's data."
authors = [
    "Nick Schaub <nick.schaub@nih.gov>",
    "Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>",
    "Kevin Hannon <kevin.hannon@axleinfo.com>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
filepattern = "^2.0.5"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
ipykernel = "^6.21.2"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
