[tool.poetry]
name = "polus-tabular-utils-rxiv-download"
version = "0.1.1-dev0"
description = "Fetch text data from rxiv"
authors = [
           "Nick Schaub <nick.schaub@nih.gov>",
           "Hamdah Shafqat abbasi <hamdahshafqat.abbasi@nih.gov>"
           ]
readme = "README.md"
packages = [{include = "polus", from = "src"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = "^0.7.0"
requests = "^2.31.0"
rxiv-types = "^0.1.0"
tqdm = "^4.66.1"
xmltodict = "^0.13.0"
pydantic = "1.10.4"
numpy = "<2.0.0"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
flake8 = "^6.0.0"
pre-commit = "^3.2.1"
flake8-docstrings = "^1.7.0"
black = "^23.3.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
